// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DivSequenceRendering /> renders with no features 1`] = `
<div
  class="DivSequenceRendering"
  style="height: 16px; font-size: 12.8px;"
>
  <div
    style="display: flex;"
  />
</div>
`;

exports[`<DivSequenceRendering /> renders with one feature with a correct seq, zoomed in, should render nicely 1`] = `
<div
  class="DivSequenceRendering"
  style="height: 16px; font-size: 12.8px;"
>
  <div
    style="display: flex;"
  >
    <div
      class="base base-a border"
    >
      A
    </div>
    <div
      class="base base-b border"
    >
      B
    </div>
    <div
      class="base base-c border"
    >
      C
    </div>
    <div
      class="base base-d border"
    >
      D
    </div>
    <div
      class="base base-e border"
    >
      E
    </div>
    <div
      class="base base-f border"
    >
      F
    </div>
    <div
      class="base base-g border"
    >
      G
    </div>
    <div
      class="base base-h border"
    >
      H
    </div>
    <div
      class="base base-i border"
    >
      I
    </div>
  </div>
</div>
`;

exports[`<DivSequenceRendering /> renders with one feature with an incorrect seq, zoomed in, should throw 1`] = `
<h1
  class="error"
>
  Error: feature one did not contain a valid \`seq\` attribute seq length 2 did not match 3
</h1>
`;

exports[`<DivSequenceRendering /> renders with one feature with no seq, zoomed in, should throw 1`] = `
<h1
  class="error"
>
  Error: feature one did not contain a valid \`seq\` attribute seq did not exist
</h1>
`;

exports[`<DivSequenceRendering /> renders with one, zoomed way out 1`] = `
<div
  class="DivSequenceRendering"
  style="height: 16px; font-size: 12.8px;"
>
  <div
    style="display: flex;"
  >
    <div
      class="base base-a "
    />
    <div
      class="base base-b "
    />
  </div>
</div>
`;
